--- a/frontend/src/Components/Table/TableHeaderCell.css
+++ b/frontend/src/Components/Table/TableHeaderCell.css
@@ -9,7 +9,7 @@
   margin-left: 10px;
 }
 
-@media only screen and (max-width: $breakpointSmall) {
+@media only screen and (max-width: $breakpointMedium) {
   .headerCell {
     white-space: nowrap;
   }
